# EN605.617

module12/opencl_batched_ablation/: CMakeLists.txt  Makefile
module12/opencl_batched_ablation/include/: config.h  types.h
module12/opencl_batched_ablation/kernels/: ablation.cl  forward_pass.cl  scoring.cl
module12/opencl_batched_ablation/scripts/: build.sh  run.sh
module12/opencl_batched_ablation/src/: ablation_engine.cpp  ablation_engine.h  cl_setup.cpp  cl_setup.h  device_info.cpp  device_info.h  main.cpp
module3/: assignment.cu  results.csv  thoughts.txt
module5/all_memory/: Makefile  main.cu  run.sh
module6/streams_events_assignment/: CMakeLists.txt  README.md  main.cu
module9/cuda_adv_libs_assignment/: Makefile
module9/cuda_adv_libs_assignment/include/: config.h  types.h
module9/cuda_adv_libs_assignment/scripts/: run_all.sh
module9/cuda_adv_libs_assignment/src/: ablation.cu  ablation.h  baseline.cu  baseline.h  batched_engine.cu  benchmark.h  main.cu  transformer.cu  transformer.h  validation.cu
project/: Makefile  README.md
project/include/: config.h  cuda_utils.h  types.h
project/python/: ablation_engine.cpp  setup.py
project/scripts/: export_weights.py  run_all.sh  run_from_python.py
project/src/: ablation.cu  ablation.h  baseline.cu  batched_engine.cu  batched_engine.h  benchmark.cu  main.cu  transformer.cu  transformer.h  validation.cu  validation.h  weight_io.cu  weight_io.h
